--- a/home.html
+++ b/home.html
@@ -13,6 +13,7 @@
     <section id="landing-section">
             <header>
                 <img class="logo-image" src="../images/logo.png" alt="logo image">
+                <img class="jbl" src="images/JBL.png">
                 <nav>
                     <ul>
                         <li>Home</li>
@@ -28,7 +29,22 @@
             
         <div class="hero-text">
                 <h1>99 CHEAT</h1>
+        </div>
+
+        <div class="home-main-img">
+            <h1 class="home-j">J</h1>
+            <h1 class="home-b">B</h1>
+            <h1 class="home-j">L</h1>
+            <img class="home-headset" src="./images/home-img.png" alt="headset image">
+            <img class="logo-small" src="images/150.png">
+            <div class=" spec-btn2">
+                <button>Buy Now
+                    <img src="images/Vector (1).png" alt="">
+                </button>
+                <!-- <img src="./images/Tooltip 4.png" alt="tooltip image">
+                <button class="shaded-btn">$150</button> -->
             </div>
+        </div>
         <aside>
             <div class="follow-us">
                 <p style="color: rgb(195, 188, 188);">Follow us</p>
@@ -39,6 +55,16 @@
                 <a><img class="social-media" src="images/youtube-fill.png"></a>
                 <a><img class="social-media" src="images/facebook-circle-fill.png"></a>
             </div>
+            <!-- <div class="home-main-img">
+                <h1 class="home-j">J</h1>
+                <h1 class="home-b">B</h1>
+                <h1 class="home-j">L</h1>
+                <img class="home-headset" src="./images/home-img.png" alt="headset image">
+                <div class="home-tooltip">
+                    <img src="./images/Home button.png" alt="tooltip image">
+                    <button class="shaded-btn">$150</button>
+                </div>
+            </div> -->
         </aside>
     </section>
 </div>
@@ -54,10 +80,9 @@
                             user.
                         </p>
                     </div>
-                    <div class="block2-contant-sec2">
-                        <button class="shaded-btn">
-                            Knew more
-                            <img src="./images/information-fill.png" alt="info logo">
+                    <div class="block2-contant-sec2 spec-btn">
+                        <button>know More
+                            <img src="images/information-fill.png" alt="">
                         </button>
                     </div>
                 </div>
@@ -148,6 +173,9 @@
     </section>
     <footer class="section-footer">
         <div class="footer-div">
+            <div class="f-logo">
+            <img class="jbl" src="images/JBL.png">
+        </div>
             <div class="foot-row">
                 <div class="foot-col">
                     <h4>Products</h4>
@@ -181,7 +209,7 @@
                 </div>
             </div>
             <div class="foot-desc">
-                <p>© Developed by <ahref= "#">Butterfly Agency</ a> | Kurdistan</ p>
+                <p>© Developed by <a href= "#">Butterfly Agency</a> | Kurdistan</ p>
             </div>
         </div>
     </footer>
