font changed, logo updated

--- a/home.html
+++ b/home.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 4</title>
     <link rel="stylesheet" href="css/style.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <div class="land">
-    <section id="landing-section">
+        <section id="landing-section">
             <header>
-                <img class="logo-image" src="../images/logo.png" alt="logo image">
+                <img class="logo-image" src="images/logo.png" alt="logo image">
                 <img class="jbl" src="images/JBL.png">
                 <nav>
                     <ul>
@@ -26,47 +29,37 @@
                     <img class="menu-img" src="images/menu.png">
                 </div>
             </header>
-            
-        <div class="hero-text">
-                <h1>99 CHEAT</h1>
-        </div>
 
-        <div class="home-main-img">
-            <h1 class="home-j">J</h1>
-            <h1 class="home-b">B</h1>
-            <h1 class="home-j">L</h1>
-            <img class="home-headset" src="./images/home-img.png" alt="headset image">
-            <img class="logo-small" src="images/150.png">
-            <div class=" spec-btn2">
-                <button>Buy Now
-                    <img src="images/Vector (1).png" alt="">
-                </button>
-                
+            <div class="hero-text">
+                <h1>99 CHEAT</h1>
             </div>
-        </div>
-        <aside>
-            <div class="follow-us">
-                <p style="color: rgb(195, 188, 188);">Follow us</p>
-            </div>
-            <hr>
-            <div class="social">
-                <a><img class="social-media" src="images/instagram-fill.png"></a>
-                <a><img class="social-media" src="images/youtube-fill.png"></a>
-                <a><img class="social-media" src="images/facebook-circle-fill.png"></a>
-            </div>
-            <!-- <div class="home-main-img">
+
+            <div class="home-main-img">
                 <h1 class="home-j">J</h1>
                 <h1 class="home-b">B</h1>
                 <h1 class="home-j">L</h1>
                 <img class="home-headset" src="./images/home-img.png" alt="headset image">
-                <div class="home-tooltip">
-                    <img src="./images/Home button.png" alt="tooltip image">
-                    <button class="shaded-btn">$150</button>
+                <img class="logo-small" src="images/150.png">
+                <div class=" spec-btn2">
+                    <button>Buy Now
+                        <img src="images/Vector (1).png" alt="">
+                    </button>
+
                 </div>
-            </div> -->
-        </aside>
-    </section>
-</div>
+            </div>
+            <aside>
+                <div class="follow-us">
+                    <p style="color: rgb(195, 188, 188);">Follow us</p>
+                </div>
+                <hr>
+                <div class="social">
+                    <a><img class="social-media" src="images/instagram-fill.png"></a>
+                    <a><img class="social-media" src="images/youtube-fill.png"></a>
+                    <a><img class="social-media" src="images/facebook-circle-fill.png"></a>
+                </div>
+            </aside>
+        </section>
+    </div>
     <!--  2 -->
     <div class="block2">
         <div class="block2-container">
@@ -86,7 +79,7 @@
                     </div>
                 </div>
                 <div class="block2-img">
-                    <img  class="infine" src="./images/logo.png" alt="logo">
+                    <img class="infine" src="./images/logo.png" alt="logo">
                     <img class="bloc-headp" src="images/block2-head.png">
                 </div>
             </div>
@@ -173,8 +166,8 @@
     <footer class="section-footer">
         <div class="footer-div">
             <div class="f-logo">
-            <img class="jbl" src="images/JBL.png">
-        </div>
+                <img class="jbl" src="images/JBL.png">
+            </div>
             <div class="foot-row">
                 <div class="foot-col">
                     <h4>Products</h4>
@@ -208,13 +201,10 @@
                 </div>
             </div>
             <div class="foot-desc">
-                <p>© Developed by <a href= "#">Butterfly Agency</a> | Kurdistan</ p>
+                <p>© Developed by <a href="#">Butterfly Agency</a> | Kurdistan</ p>
             </div>
         </div>
     </footer>
 </body>
+
 </html>
-
-
-
-
