--- a/home.html
+++ b/home.html
@@ -31,7 +31,8 @@
             </header>
 
             <div class="hero-text">
-                <h1>99 CHEAT</h1>
+                <!-- <h1>99 CHEAT</h1> -->
+                 <img src="images/99 Cheat.png">
             </div>
 
             <div class="home-main-img">
@@ -49,7 +50,7 @@
             </div>
             <aside>
                 <div class="follow-us">
-                    <p style="color: rgb(195, 188, 188);">Follow us</p>
+                    <p style="color: #9d9895;">Follow us</p>
                 </div>
                 <hr>
                 <div class="social">
