font size updated

--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
 
             <div class="hero-text">
                 <!-- <h1>99 CHEAT</h1> -->
-                 <img src="images/99 Cheat.png">
+                <img src="images/99 Cheat.png">
             </div>
 
             <div class="home-main-img">
@@ -61,7 +61,7 @@
             </aside>
         </section>
     </div>
-    <!--  2 -->
+    <!--  section 2 -->
     <div class="block2">
         <div class="block2-container">
             <div class="block2-group1">
