--- a/home.html
+++ b/home.html
@@ -15,24 +15,23 @@
     <div class="land">
         <section id="landing-section">
             <header>
-                <img class="logo-image" src="images/logo.png" alt="logo image">
-                <img class="jbl" src="images/JBL.png">
+                <img class="logo-image" src="images/logo.png" alt="Infinity image">
+                <img class="jbl" src="images/JBL.png" alt="JBL Image">
                 <nav>
-                    <ul>
-                        <li>Home</li>
-                        <li>About</li>
-                        <li>Favorites</li>
-                        <li>Model</li>
+                    <ul class="nav-links">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Favorites</a></li>
+                        <li><a href="#">Model</a></li>
                     </ul>
                 </nav>
                 <div class="menu">
-                    <img class="menu-img" src="images/menu.png">
+                    <img class="menu-img" src="images/menu.png" alt="navbar-menu">
                 </div>
             </header>
 
             <div class="hero-text">
-                <!-- <h1>99 CHEAT</h1> -->
-                <img src="images/99 Cheat.png">
+                <img src="images/99 Cheat.png" alt="99 Cheat">
             </div>
 
             <div class="home-main-img">
@@ -40,23 +39,23 @@
                 <h1 class="home-b">B</h1>
                 <h1 class="home-j">L</h1>
                 <img class="home-headset" src="./images/home-img.png" alt="headset image">
-                <img class="logo-small" src="images/150.png">
+                <img class="logo-small" src="images/150.png" alt="150">
                 <div class=" spec-btn2">
                     <button>Buy Now
-                        <img src="images/Vector (1).png" alt="">
+                        <img src="images/Vector (1).png" alt="information-fill">
                     </button>
 
                 </div>
             </div>
             <aside>
                 <div class="follow-us">
-                    <p style="color: #9d9895;">Follow us</p>
+                    <p>Follow us</p>
                 </div>
                 <hr>
                 <div class="social">
-                    <a><img class="social-media" src="images/instagram-fill.png"></a>
-                    <a><img class="social-media" src="images/youtube-fill.png"></a>
-                    <a><img class="social-media" src="images/facebook-circle-fill.png"></a>
+                    <a href="#"><img class="social-media" src="images/instagram-fill.png" alt="instagram"></a>
+                    <a href="#"><img class="social-media" src="images/youtube-fill.png" alt="youtube"></a>
+                    <a href="#"><img class="social-media" src="images/facebook-circle-fill.png" alt="facebook"></a>
                 </div>
             </aside>
         </section>
@@ -66,7 +65,7 @@
         <div class="block2-container">
             <div class="block2-group1">
                 <div class="block2-contents">
-                    <div class="block2-contant-sec1">
+                    <div class="block2-herosec">
                         <h3>MORE ABOUT US</h3>
                         <p>Enjoy award-winning JBL sound with wireless listening freedom and a sleek,
                             streamlined design with comfortable cushioned earcups that deliver premium playback for the
@@ -75,13 +74,13 @@
                     </div>
                     <div class="block2-contant-sec2 spec-btn">
                         <button>know More
-                            <img src="images/information-fill.png" alt="">
+                            <img src="images/information-fill.png" alt="information-fill">
                         </button>
                     </div>
                 </div>
                 <div class="block2-img">
                     <img class="infine" src="./images/logo.png" alt="logo">
-                    <img class="bloc-headp" src="images/block2-head.png">
+                    <img class="bloc-headp" src="images/block2-head.png" alt="headphone image">
                 </div>
             </div>
         </div>
@@ -92,19 +91,19 @@
             <h3>CHOOSE YOUR FAVOURATE</h3>
             <div class="item-images">
                 <div class="blr">
-                    <img src="images/favorite-2.png">
+                    <img src="images/favorite-2.png" alt="white blur headphone">
                     <div class="blr-btn">
                         <button class="bb">Black Mettal</button>
                     </div>
                 </div>
                 <div class="no-blr">
-                    <img src="images/favorite-1.png">
+                    <img src="images/favorite-1.png" alt="No blur headphone">
                     <div class="no-blr-btn">
                         <button class="nbb">Black Mettal</button>
                     </div>
                 </div>
                 <div class="blr">
-                    <img src="images/favorite-4.png">
+                    <img src="images/favorite-4.png" alt="Blur headphone">
                     <div class="blr-btn">
                         <button class="bb">Black Mettal</button>
                     </div>
@@ -118,28 +117,28 @@
                 <h3>MODEL SPECIFICATION</h3>
             </div>
             <div class="headphone">
-                <img class="d4" src="images/circle.png">
-                <img class="l21" src="images/l11.png">
-                <img class="l22" src="images/l12.png">
-                <img class="charge" src="images/charge.png">
-                <img class="d3" src="images/circle.png">
-                <img class="l11" src="images/l11.png">
-                <img class="l12" src="images/l12.png">
-                <img class="comfort" src="images/comfort.png">
-                <img class="image" src="images/specs-img.png" alt="">
-                <img class="d1" src="images/circle.png">
-                <img class="r11" src="images/r11.png">
-                <img class="r12" src="images/r12.png">
-                <img class="easy" src="images/easy-adjust.png">
-                <img class="d2" src="images/circle.png">
-                <img class="r21" src="images/r11.png">
-                <img class="r22" src="images/r22.png">
-                <img class="custom" src="images/custom-aud.png">
+                <img class="d4" src="images/circle.png" alt="dot">
+                <img class="l21" src="images/l11.png" alt="line">
+                <img class="l22" src="images/l12.png" alt="line">
+                <img class="charge" src="images/charge.png" alt="chanrge button">
+                <img class="d3" src="images/circle.png" alt="dot">
+                <img class="l11" src="images/l11.png" alt="line">
+                <img class="l12" src="images/l12.png" alt="line">
+                <img class="comfort" src="images/comfort.png" alt="confort button">
+                <img class="image" src="images/specs-img.png" alt="Headphone full image">
+                <img class="d1" src="images/circle.png" alt="dot">
+                <img class="r11" src="images/r11.png" alt="line">
+                <img class="r12" src="images/r12.png" alt="line">
+                <img class="easy" src="images/easy-adjust.png" alt="easy button">
+                <img class="d2" src="images/circle.png" alt="dot">
+                <img class="r21" src="images/r11.png" alt="line">
+                <img class="r22" src="images/r22.png" alt="line">
+                <img class="custom" src="images/custom-aud.png" alt="custom button">
 
             </div>
             <div class="spec-btn">
                 <button>Buy Now
-                    <img src="images/Vector (1).png" alt="">
+                    <img src="images/Vector (1).png" alt="Buy now image">
                 </button>
             </div>
 
@@ -150,16 +149,16 @@
         <div class="sponser-main">
             <div class="sponser">
                 <div class="sponser-img">
-                    <img src="images/apple.png">
+                    <img src="images/apple.png" alt="apple">
                 </div>
                 <div class="sponser-img">
-                    <img src="images/spotify.png">
+                    <img src="images/spotify.png" alt="spotify">
                 </div>
                 <div class="sponser-img">
-                    <img src="images/amazon.png">
+                    <img src="images/amazon.png" alt="amazon">
                 </div>
                 <div class="sponser-img">
-                    <img src="images/youtube.png">
+                    <img src="images/youtube.png" alt="youtube">
                 </div>
             </div>
         </div>
@@ -167,24 +166,24 @@
     <footer class="section-footer">
         <div class="footer-div">
             <div class="f-logo">
-                <img class="jbl" src="images/JBL.png">
+                <img class="jbl" src="images/JBL.png" alt="JBL Logo">
             </div>
             <div class="foot-row">
                 <div class="foot-col">
                     <h4>Products</h4>
                     <ul>
-                        <li>Headphones</li>
-                        <li>Earphones</li>
-                        <li>Earbuds</li>
-                        <li>Accesories</li>
+                        <li><a href="#">Headphones</a></li>
+                        <li><a href="#">Earphones</a></li>
+                        <li><a href="#">Earbuds</a></li>
+                        <li><a href="#">Accesories</a></li>
                     </ul>
                 </div>
                 <div class="foot-col">
                     <h4>support</h4>
                     <ul>
-                        <li>Product Help</li>
-                        <li>Updates</li>
-                        <li>Providers</li>
+                        <li><a href="#">Product Help</a></li>
+                        <li><a href="#">Updates</a></li>
+                        <li><a href="#">Providers</a></li>
                     </ul>
                 </div>
                 <div class="foot-column">
@@ -195,14 +194,15 @@
                         </button>
                     </div>
                     <div class="social-med">
-                        <div class="social-row"><a href="#"><img src="images/instagram-fill.png"></a></div>
-                        <div class="social-row"><a href="#"><img src="images/facebook-circle-fill.png"></a></div>
-                        <div class="social-row"><a href="#"><img src="images/youtube-fill.png"></a></div>
+                        <div class="social-row"><a href="#"><img src="images/instagram-fill.png" alt="instagram"></a></div>
+                        <div class="social-row"><a href="#"><img src="images/facebook-circle-fill.png" alt="facebook"></a></div>
+                        <div class="social-row"><a href="#"><img src="images/youtube-fill.png" alt="youtube"></a></div>
                     </div>
                 </div>
             </div>
             <div class="foot-desc">
-                <p>© Developed by <a href="#">Butterfly Agency</a> | Kurdistan</ p>
+                <p class="desktop-desc">© Developed by <a href="#">Butterfly Agency</a> | Kurdistan</ p>
+                <p class="mobile-description">© All Rights Reserved By Bedimcode</p>
             </div>
         </div>
     </footer>
