--- a/home.html
+++ b/home.html
@@ -93,19 +93,19 @@
                 <div class="blr">
                     <img src="images/favorite-2.png" alt="white blur headphone">
                     <div class="blr-btn">
-                        <button class="bb">Black Mettal</button>
+                        <button class="bb">Black Model</button>
                     </div>
                 </div>
                 <div class="no-blr">
                     <img src="images/favorite-1.png" alt="No blur headphone">
                     <div class="no-blr-btn">
-                        <button class="nbb">Black Mettal</button>
+                        <button class="nbb">Black Model</button>
                     </div>
                 </div>
                 <div class="blr">
                     <img src="images/favorite-4.png" alt="Blur headphone">
                     <div class="blr-btn">
-                        <button class="bb">Black Mettal</button>
+                        <button class="bb">Black Model</button>
                     </div>
                 </div>
             </div>
