--- a/home.html
+++ b/home.html
@@ -39,7 +39,11 @@
                 <h1 class="home-b">B</h1>
                 <h1 class="home-j">L</h1>
                 <img class="home-headset" src="./images/home-img.png" alt="headset image">
-                <img class="logo-small" src="images/150.png" alt="150">
+                <!-- <img class="logo-small" src="images/150.png" alt="150"> -->
+                <img class="dot" src="images/circle.png">
+                <img class="line1" src="images/r11.png">
+                <img class="line2" src="images/r12.png">
+                <img class="r150" src="images/150rs.png">
                 <div class=" spec-btn2">
                     <button>Buy Now
                         <img src="images/Vector (1).png" alt="information-fill">
@@ -54,8 +58,9 @@
                 <hr>
                 <div class="social">
                     <a href="#"><img class="social-media" src="images/instagram-fill.png" alt="instagram"></a>
-                    <a href="#"><img class="social-media" src="images/youtube-fill.png" alt="youtube"></a>
                     <a href="#"><img class="social-media" src="images/facebook-circle-fill.png" alt="facebook"></a>
+                    <a href="#"><img class="social-media" src="images/youtube-fill.png" alt="youtube"></a>
+
                 </div>
             </aside>
         </section>
@@ -88,7 +93,7 @@
     <!-- section3 -->
     <section class="items-main">
         <div class="items">
-            <h3>CHOOSE YOUR FAVOURATE</h3>
+            <h3>CHOOSE YOUR FAVORITE</h3>
             <div class="item-images">
                 <div class="blr">
                     <img src="images/favorite-2.png" alt="white blur headphone">
@@ -194,9 +199,9 @@
                         </button>
                     </div>
                     <div class="social-med">
-                        <div class="social-row"><a href="#"><img src="images/instagram-fill.png" alt="instagram"></a></div>
-                        <div class="social-row"><a href="#"><img src="images/facebook-circle-fill.png" alt="facebook"></a></div>
-                        <div class="social-row"><a href="#"><img src="images/youtube-fill.png" alt="youtube"></a></div>
+                        <div class="social-row"><a href="#"><img src="images/insta.png" alt="instagram"></a></div>
+                        <div class="social-row"><a href="#"><img src="images/youtube-new.png" alt="facebook"></a></div>
+                        <div class="social-row"><a href="#"><img src="images/fb.png" alt="youtube"></a></div>
                     </div>
                 </div>
             </div>
