--- a/home.html
+++ b/home.html
@@ -118,7 +118,7 @@
     <section class="section4">
         <div class="spec-sec">
             <div class="spec-head">
-                <h3>MODEL SPECIFICATION</h3>
+                <h3>MODEL SPECIFICATIONS</h3>
             </div>
             <div class="headphone">
                 <img class="d4" src="images/circle.png" alt="dot">
@@ -199,8 +199,8 @@
                     </div>
                     <div class="social-med">
                         <div class="social-row"><a href="#"><img src="images/insta.png" alt="instagram"></a></div>
-                        <div class="social-row"><a href="#"><img src="images/youtube-new.png" alt="facebook"></a></div>
                         <div class="social-row"><a href="#"><img src="images/fb.png" alt="youtube"></a></div>
+                        <div class="social-row"><a href="#"><img src="images/youtube-new.png" alt="facebook"></a></div>
                     </div>
                 </div>
             </div>
