--- a/home.html
+++ b/home.html
@@ -29,11 +29,9 @@
                     <img class="menu-img" src="images/menu.png" alt="navbar-menu">
                 </div>
             </header>
-
             <div class="hero-text">
                 <img src="images/99 Cheat.png" alt="99 Cheat">
             </div>
-
             <div class="home-main-img">
                 <h1 class="home-j">J</h1>
                 <h1 class="home-b">B</h1>
@@ -59,7 +57,6 @@
                     <a href="#"><img class="social-media" src="images/instagram-fill.png" alt="instagram"></a>
                     <a href="#"><img class="social-media" src="images/facebook-circle-fill.png" alt="facebook"></a>
                     <a href="#"><img class="social-media" src="images/youtube-fill.png" alt="youtube"></a>
-
                 </div>
             </aside>
         </section>
@@ -83,8 +80,8 @@
                     </div>
                 </div>
                 <div class="block2-img">
-                    <img class="infine" src="./images/logo.png" alt="logo">
-                    <img class="bloc-headp" src="images/block2-head.png" alt="headphone image">
+                    <img class="infine" src="./images/logo.png" alt="Infinite Image">
+                    <img class="bloc-headp" src="images/block2-head.png" alt=" Balck headphone image">
                 </div>
             </div>
         </div>
@@ -138,14 +135,12 @@
                 <img class="r21" src="images/r11.png" alt="line">
                 <img class="r22" src="images/r22.png" alt="line">
                 <img class="custom" src="images/custom-aud.png" alt="custom button">
-
             </div>
             <div class="spec-btn">
                 <button>Buy Now
                     <img src="images/Vector (1).png" alt="Buy now image">
                 </button>
             </div>
-
         </div>
     </section>
     <!-- connect -->
