--- a/home.html
+++ b/home.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 4</title>
     <link rel="stylesheet" href="css/style.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -68,9 +67,7 @@
                 <div class="block2-contents">
                     <div class="block2-herosec">
                         <h3>MORE ABOUT US</h3>
-                        <p>Enjoy award-winning JBL sound with wireless listening freedom and a sleek,
-                            streamlined design with comfortable cushioned earcups that deliver premium playback for the
-                            user.
+                        <p>Enjoy award-winning JBL sound with wireless listening freedom and a sleek, streamlined design with comfortable cushioned earcups that deliver premium playback for the user.
                         </p>
                     </div>
                     <div class="block2-contant-sec2 spec-btn">
